--- a/txtToXmlManager/pom.xml
+++ b/txtToXmlManager/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.travelcompany.eshop</groupId>
+    <groupId>com.ed.xmlTraining</groupId>
     <artifactId>txtToXmlManager</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
@@ -9,7 +9,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
-        <exec.mainClass>com.travelcompany.eshop.txttoxmlmanager.TxtToXmlManager</exec.mainClass>
+        <exec.mainClass>com.ed.xmlTraining.txttoxmlmanager.TxtToXmlManager</exec.mainClass>
         <logback.version>1.2.11</logback.version>
         <jackson.version>2.17.2</jackson.version>
     </properties>
